
 - [2009-01-25] Error reporting of CL library has been made more consistent (including some obvious bugs),
   triggered by stricter tests in new version of the Perl API (CWB::CL module).  Also introduced some new
   error codes (e.g. for internal buffer overflow), but these are not checked and set systematically yet.

 - [2009-02-26] Added safety checks to cwb-encode in order to ensure that annotation strings are not longer than
   the internal hard-coded limit of MAX_LINE_LENGTH-1 characters.  Oversized annotation strings are now truncated
   with a warning message.

 - [2009-06-11] Fixed segmentation fault in cwb-align on 64-bit platforms (original developer had assumed that
   a pointer always has the same sized as an unsigned int ... aaaargh!).  Kudos to Bogdan Babych (b.babych@leeds.ac.uk)
   for a beautiful and fully reproducible bug report.

 - [2010-01-09] NOT FIXED: Huffman codes may exceed maximal allowed code length of 31 bits in some extreme cases,
   which was not checked in cwb-huffcode and could lead to buffer overflows and segmentation faults.  The program
   now aborts with an error message, but the underlying problem has not been fixed yet.  It is NOT POSSIBLE just
   to increase MAXCODELEN<cl/attributes.h>, as this changes the index file format and breaks compatibility with
   previously encoded corpora.  The only good solution is to patch the Huffman code generation so that it computes
   a suboptimal code in this cases that stays within the allowed limit, but for this somebody needs to go through
   and understand the entire code in compute_code_lengths()<utils/cwb-huffcode.c>. 


Version 2.2.b99 (2007-03-11)
----------------------------

 - initial public release of the CWB source code on http://cwb.sf.net
 - source code and build system has already been cleaned up from the IMS-internal version
 - intended to be ready for public release (as v3.0) without major changes or additions
